[package]
name = "canvas_rust_game"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1"
once_cell = "1.21.3"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Window",
  "Document", 
  "Element",
  "HtmlCanvasElement", 
  "CanvasRenderingContext2d",
  "console",
  "KeyboardEvent",
  "HtmlImageElement"
]

[lib]
crate-type = ["cdylib"]